# haskellmacroprocessor

./: .gitattributes  .gitignore  cabal.project  macro.cabal
app/: Main.hs
src/: MP.hs
test/: Golden.hs  Props.hs  Tests.hs
test/golden/: pooh.golden  welcomeHardy.golden
