cabal-version:      3.0
-- The name of the package.
name:               macro

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           Lab #3 - Macroprocessor
description:        An exercise to provide experience with recursive list processing in Haskell.

author:             Imperial College London
maintainer:         j.willis19@imperial.ac.uk
build-type:         Simple

common common-settings
    -- Options to pass to GHC, in this case, we want to turn on warnings
    ghc-options: -Wtabs -Wunused-binds -Wmissing-signatures
    -- Base language which the package is written in.
    default-language: Haskell2010
    -- The range of GHC base library verisons that are supported
    build-depends:    base >=4.13 && <5

library
    import:           common-settings
    -- Modules exported by the library.
    exposed-modules:  MP
    -- Directories containing source files.
    hs-source-dirs:   src

executable macroprocessor
    import:           common-settings
    build-depends:    macro
    hs-source-dirs:   app
    main-is:          Main.hs

common test-common
    import:           common-settings
    -- Directories containing source files.
    hs-source-dirs:   test
    -- Enables the timeout during the tests to work properly
    -- If you're having difficulties running the tests, comment out the line below
    ghc-options:      -threaded
    build-depends:    macro,
                      tasty >=1.1 && <1.4

test-suite macro-test
    import:           test-common
    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0
    -- The entrypoint to the test suite.
    main-is:          Tests.hs
    build-depends:    tasty-hunit >=0.9 && <0.11

test-suite macro-properties
    import:           test-common
    type:             exitcode-stdio-1.0
    main-is:          Props.hs
    build-depends:    tasty-quickcheck >=0.10 && <0.11

test-suite macro-golden
    import:           test-common
    type:             exitcode-stdio-1.0
    main-is:          Golden.hs
    build-depends:    tasty-golden >=2.3.4 && <2.4,
                      deepseq,
                      directory
